--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsistencia.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsistencia.cshtml
@@ -5,6 +5,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     inf245netsoft db = new inf245netsoft();
 }
+<style>
+    td {
+        text-align: center;
+    }
+</style>
+
 <div class="container-fluid">
     <div class="col-md-5">
         <ol class="breadcrumb">
@@ -13,61 +19,78 @@
     </div>
 </div>
 
-<div class="container"> <br />   
+<div class="container">  
     <div id="alerta" class="alert alert-warning" hidden></div>
     <center class="row">
-        @using (Html.BeginForm("ReporteAsistencia", "CuentaUsuario", FormMethod.Post, new { @class = "form-horizontal" }))
+        @using (Html.BeginForm("ReporteAsistencia", "CuentaUsuario", FormMethod.Post, new { @class = "" }))
         {
-            <center class="row form-inline">
-                <div class="col-md-12">
-                    <div class="input-group">
-                        <span class="input-group-addon">Desde:</span>
-                        <input id="fIni" type="date" class="form-control">
-                    </div>
-                    <div class="input-group">
-                        <span class="input-group-addon">Hasta:</span>
-                        <input id="fFin" type="date" class="form-control">
+            <div>
+                <div class="form-inline">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">Desde:</span>
+                                <input id="fIni" type="date" class="form-control">
+                            </div>
+                        </div>
+                        &nbsp;
+                        <div class="form-group">
+                            <div class="input-group">
+                                <span class="input-group-addon">Hasta:</span>
+                                <input id="fFin" type="date" class="form-control">
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </center> <br>   
-            <center class="row form-inline">                
-                    <label for="nombre" class="control-label col-md-4">Nombre del Vendedor:</label>
-                    <div class="col-md-8">
-                        <input name="nomvendedor" type="text" class="form-control" id="nombre" placeholder="">
-                    </div>                
-            </center><br>
+            </div>
+            <br><br>            
+            <div>
+                <div class="form-inline">
+                    <div class="col-md-12">
+                        <label for="nombre" class="control-label col-md-4 ">Nombre del vendedor:</label>
+                        <div class="col-md-8">
+                            <input name="nomvendedor" type="text" class="form-control" id="nombre" placeholder="">
+                        </div>
+                    </div>
+                </div>
+            </div><br><br>
             
+            <div>
+                <div class="form-inline">
+                    <label for="puntoVenta" class="control-label col-md-4">Punto de venta:</label>
+                    @{
+            try
+            {
+                var data = from obj in db.PuntoVenta
+                           select obj;
+                <div class="col-md-8">
+                    <select id="puntoVenta" class="form-control ">
+                        @foreach (var punto in data)
+                        {
+                            <option value="@punto.codPuntoVenta">@punto.nombre</option>
+                        }
+                    </select>
+                </div>
+            }
+            catch (Exception ex)
+            {
+                //No pudo cargar los puntos de venta
+                Console.WriteLine(ex.StackTrace);
+            }
+                    }
+                </div>
 
-            <div class="row form-inline">
-                <label for="puntoVenta" class="control-label col-md-4">Punto de venta:</label>
-                @{
-                        try
-                        {
-                            var data = from obj in db.PuntoVenta
-                                       select obj;
-                            <div class="col-md-8">
-                                <select id="puntoVenta" class="form-control ">
-                                    @foreach (var punto in data)
-                                    {
-                                        <option value="@punto.codPuntoVenta">@punto.nombre</option>
-                                    }
-                                </select>
-                            </div>
-                        }
-                        catch (Exception ex)
-                        {
-                            //No pudo cargar los puntos de venta
-                            Console.WriteLine(ex.StackTrace);
-                        }
-                }
-            </div><br />
-            <div class="row form-inline">
-                <center>
-                    <a id="generarReport" class="btn btn-primary" onclick="realizar()"><span class="fa fa-table fa-lg"></span> Generar</a>
-                    <a id="newReport" class="btn btn-primary" onclick="nuevoReporte()"><span class="fa fa-table fa-lg"></span> Nuevo Reporte</a>
-                    <a id="export-btn" onclick="generarExcel()" target="_blank" class="btn btn-success btn-excel"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel </a>
-                </center>
-            </div><br />
+            </div><br><br>
+            
+            <div>
+                <div class="form-inline">
+                    <center>
+                        <a id="generarReport" class="btn btn-primary" onclick="realizar()"><span class="fa fa-table fa-lg"></span> Generar</a>
+                        <a id="newReport" class="btn btn-primary" onclick="nuevoReporte()"><span class="fa fa-table fa-lg"></span> Nuevo Reporte</a>
+                        <a id="export-btn" onclick="generarExcel()" target="_blank" class="btn btn-success btn-excel"><span class="fa fa-file-excel-o fa-lg"></span> Exportar a Excel </a>
+                    </center>
+                </div>
+            </div><br /><br />
         }
     </center>
 
@@ -97,7 +120,7 @@
         fechF = $("#fFin").val();
         fechI = $("#fIni").val();
         if (fechI == '') {
-            $("#alerta").append('<strong>Fecha desde es obligatorio</strong>').show();
+            $("#alerta").append('<strong>"Fecha desde" es obligatorio</strong>').show();
             return;
         }
         if (fechF == '') {
@@ -107,7 +130,7 @@
         }
         if (fechF != '' && fechI != '') {
             if (new Date(fechF.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1")) < new Date(fechI.replace(/(\d{4})-(\d{2})-(\d{2})/, "$2/$3/$1"))) {
-                $("#alerta").append('<strong>Fecha hasta no puede ser menor que fecha desde</strong>').show();
+                $("#alerta").append('<strong>"Fecha hasta" no puede ser menor que "Fecha desde"</strong>').show();
                 return;
             }
         }
@@ -122,12 +145,13 @@
                 var pVent = document.getElementById("puntoVenta");
                 var str = pVent.options[pVent.selectedIndex].text;
 
-                t1 = "<center><h4>REPORTE DE ASISTENCIA EN: " + str + "</h4><center>";
-                myTable = t1 + "<table class='table table-bordered table-hover'>";
+                t1 = "<center><h4>REPORTE DE ASISTENCIA</h4><center>";
+                t2 = "<center><h4> Punto de venta: " + str + "</h4><center>";
+                myTable = t1 + t2 +"<div class='table-responsive'><table class='table table-bordered table-hover'>";
                 myTable += "<thead><tr><th>Fecha</th>";
-                myTable += "<th>Vendedor</th><th>Hora de Ingreso</th><th>Hora de Salida</th>";
-                myTable += "<th>Hora Registrada</th>";
-                myTable += "<th>Asistio</th></tr></thead>";
+                myTable += "<th>Vendedor</th><th>Hora de ingreso</th><th>Hora de salida</th>";
+                myTable += "<th>Hora registrada</th>";
+                myTable += "<th>Observación</th></tr></thead>";
 
                 $.each(data, function (k, v) {
                     var date = new Date(parseInt(v.Fecha.substr(6)));
@@ -136,7 +160,7 @@
                     myTable += "<td> " + v.Nombre + "</td>";
                     myTable += "<td>" + v.HoraEntrada + "</td><td>" + v.HoraSalida + "</td><td>" + v.HoraRegistro + "</td><td>" + v.Asistio + "</td></tr>";
                 });
-                myTable += "</table>";
+                myTable += "</table></div>";
                 document.getElementById("my_result_table").innerHTML = myTable;
 
                 $("#export-btn").show();
