--- a/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsistencia.cshtml
+++ b/WebApplication4/WebApplication4/Views/CuentaUsuario/ReporteAsistencia.cshtml
@@ -30,14 +30,14 @@
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">Desde:</span>
-                                <input id="fIni" type="date" class="form-control">
+                                <input id="fIni" type="text" class="form-control fechar">
                             </div>
                         </div>
                         &nbsp;
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">Hasta:</span>
-                                <input id="fFin" type="date" class="form-control">
+                                <input id="fFin" type="text" class="form-control fechar">
                             </div>
                         </div>
                     </div>
