--- a/WebApplication4/WebApplication4/Views/Evento/ReporteEvento.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/ReporteEvento.cshtml
@@ -32,11 +32,11 @@
         <div class="col-md-12">
             <div class="input-group">
                 <span class="input-group-addon">Desde:</span>
-                <input id="fd1" type="date" class="form-control">
+                <input id="fd1" type="text" class="form-control fechar">
             </div>
             <div class="input-group">
                 <span class="input-group-addon">Hasta:</span>
-                <input id="fh1" type="date" class="form-control">
+                <input id="fh1" type="text" class="form-control fechar">
             </div>
         </div>        
     </center>
