--- a/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/ReporteVentas/Index.cshtml
@@ -79,11 +79,11 @@
                             <center class="row form-inline ">
                                 <div class="input-group">
                                     <span class="input-group-addon">Desde:</span>
-                                    <input id="fd1" type="date" class="form-control">
+                                    <input id="fd1" type="text" class="fechar form-control">
                                 </div>
                                 <div class="input-group">
                                     <span class="input-group-addon">Hasta:</span>
-                                    <input id="fh1" type="date" class="form-control">
+                                    <input id="fh1" type="text" class="fechar form-control">
                                 </div>
                             </center>
                             <br />
@@ -159,12 +159,12 @@
 
                                 <div class="input-group">
                                     <span class="input-group-addon">Desde:</span>
-                                    <input id="fd2" type="date" class="form-control">
+                                    <input id="fd2" type="text" class="fechar form-control">
                                 </div>
 
                                 <div class="input-group">
                                     <span class="input-group-addon">Hasta:</span>
-                                    <input id="fh2" type="date" class="form-control">
+                                    <input id="fh2" type="text" class="fechar form-control">
                                 </div>
 
                             </center>
@@ -230,12 +230,12 @@
                             <center class="row form-inline">
                                 <div class="input-group">
                                     <span class="input-group-addon">Desde:</span>
-                                    <input id="fd3" type="date" class="form-control">
+                                    <input id="fd3" type="text" class="fechar form-control">
                                 </div>
 
                                 <div class="input-group">
                                     <span class="input-group-addon">Hasta:</span>
-                                    <input id="fh3" type="date" class="form-control">
+                                    <input id="fh3" type="text" class="fechar form-control">
                                 </div>
                             </center>
                             <br />
@@ -304,11 +304,11 @@
                             <center class="row form-inline">                                
                                     <div class="input-group">
                                         <span class="input-group-addon">Desde:</span>
-                                        <input id="fd4" type="date" class="form-control">
+                                        <input id="fd4" type="text" class="fechar form-control">
                                     </div>                                
                                     <div class="input-group">
                                         <span class="input-group-addon">Hasta:</span>
-                                        <input id="fh4" type="date" class="form-control">
+                                        <input id="fh4" type="text" class="fechar form-control">
                                     </div>                                
                             </center>
                             <br>
